# ota-deploy-tracker

./: .bandit  .bazelrc  .dockerignore  .env.example  .flake8  .gitignore  BUILD  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.dashboard  Dockerfile.job-runner  LICENSE  README.md  WORKSPACE  docker-compose.yml  linkedin_post.md  medium_article.md  metrics.txt  ota_jobs.db  prometheus.yml  pyproject.toml  release_notes.md  requirements-dev.txt  requirements.txt  start-monitoring.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bazel.yml  ci.yml  deploy.yml  docker-build.yml  docker.yml  python-tests.yml  release.yml  security-scan.yml  test-and-lint.yml  test-lint.yml
backend/: BUILD  database.py  job_runner.py  main.py  models.py
cli/: BUILD  client.py  job_runner.py  servecli.py
dashboard/: BUILD  __init__.py  ota_dashboard.py
data/01JW2DN8KQX5MDGCW9DWP4KJCW/: index  meta.json
data/01JW2DN8KQX5MDGCW9DWP4KJCW/chunks/: 000001
data/01JW2F8CCACCPZTDANH2FX4G94/: index  meta.json
data/01JW2F8CCACCPZTDANH2FX4G94/chunks/: 000001
data/chunks_head/: 000001  000002
data/wal/: 00000000  00000001  00000002
k8s/: application.yaml  deployment.yaml  robots.yaml
monitoring/: docker-compose.monitoring.yml  prometheus.yml
monitoring/grafana/dashboards/: ota-deployment-dashboard.json
tests/: BUILD  conftest.py  test_api.py  test_cli.py  test_job_runner.py
