[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubernetes-deployment-manager"
version = "1.0.0"
description = "A comprehensive system for managing Kubernetes deployments"
authors = [{name = "Sylvester Francis", email = "sylvester@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]